# BertForDeprel

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  commands  pyproject.toml  requirements.txt  temp.ipynb
.github/workflows/: main.yml
BertForDeprel/: config.ini  run.py  server.py
BertForDeprel/parser/: __init__.py  config.py
BertForDeprel/parser/cmds/: __init__.py  cmd.py  evaluate.py  predict.py  temp.ipynb  train.py
BertForDeprel/parser/modules/: BertForDepRel.py  BertForDepRelOutput.py  BiAffine.py  BiAffineTrankit.py  BiLSTM.py  FixedClassDeepBiAffineClassifier.py  MLP.py  PosAndDepRelParserHead.py
BertForDeprel/parser/utils/: TODO.md  annotation_schema.py  annotation_schema_utils.py  chuliu_edmonds_utils.py  conllu_handler.py  gpu_utils.py  lemma_script_utils.py  load_data_utils.py  metric.py  model_utils.py  modules_utils.py  os_utils.py  save.py  scores_and_losses_utils.py  train_utils.py  train_utils_before_chuliu.py  types.py  ud_dataset.py
BertForDeprel/preprocessing/: 1_compute_annotation_schema.py  2_split_conllu.py  prepare_conllu.py  split_conllu.py
test/: 1_compute_annotation_schema_test.sh  3_prepare_predict_test.sh  4_predict_test.sh  compute_annotation_schema_test.sh  model_config_test.json  pretrain_test.sh  test.json
test/test_folder/train/: train.conllu
tests/: annotation_schema_test.py  annotation_schema_utils_test.py  chuliu_edmonds_utils_test.py  load_data_utils_test.py  scores_and_losses_utils_test.py  test_model_e2e.py  ud_dataset_test.py
tests/data/: english.predictions.Linux.expected.json  english.predictions.MacOS.expected.json  english.test.conllu  english.tiny.conllu  english.train.conllu  model_config_test.json  naija.predictions.Linux.expected.json  naija.predictions.Unknown.expected.json  naija.predictions.expected.conllu  naija.predictions.expected.json  naija.test.conllu  naija.train.conllu
